fix: increase spacing marginally between chips

--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -8,6 +8,6 @@
 }
 
 .chipOverrides {
-  margin: 8px 8px 0 0;
+  margin: 12px 8px 0 0;
   padding: 12px 20px;
 }
